refactor(language level): Use toList at some specific points