@@ -17,6 +17,7 @@
 package de.dytanic.cloudnet.template.install.execute.defaults;
 
 import com.google.gson.reflect.TypeToken;
+import de.dytanic.cloudnet.common.collection.Pair;
 import de.dytanic.cloudnet.template.install.InstallInformation;
 import de.dytanic.cloudnet.template.install.execute.InstallStepExecutor;
 import java.io.IOException;
@@ -24,13 +25,10 @@ import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.util.AbstractMap;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 
 public class CopyFilterStepExecutor implements InstallStepExecutor {
@@ -51,9 +49,9 @@ public class CopyFilterStepExecutor implements InstallStepExecutor {
         installInformation.serviceVersion().name()));
     }
 
-    List<Map.Entry<Pattern, String>> patterns = copy.entrySet().stream()
-      .map(entry -> new AbstractMap.SimpleEntry<>(Pattern.compile(entry.getKey()), entry.getValue()))
-      .collect(Collectors.toList());
+    var patterns = copy.entrySet().stream()
+      .map(entry -> new Pair<>(Pattern.compile(entry.getKey()), entry.getValue()))
+      .toList();
 
     Set<Path> resultPaths = new HashSet<>();
     for (var path : inputPaths) {
@@ -63,8 +61,8 @@ public class CopyFilterStepExecutor implements InstallStepExecutor {
 
       var relativePath = workingDirectory.relativize(path).toString().replace("\\", "/").toLowerCase();
       for (var patternEntry : patterns) {
-        var pattern = patternEntry.getKey();
-        var target = patternEntry.getValue();
+        var pattern = patternEntry.first();
+        var target = patternEntry.second();
 
         if (pattern.matcher(relativePath).matches()) {
           var targetPath = workingDirectory.resolve(target
